--- a/pages/details.html
+++ b/pages/details.html
@@ -15,7 +15,7 @@
     <main class="details-container">
       <div class="beer-details">
         <div class="loader">
-          <img src="/images/bongo-cat.gif" alt="cat tapping gif" />
+          <img src="/images/waitinglooneytunes.gif" alt="waiting gif" />
         </div>
       </div>
     </main>
